# regolith

./: .gitmodules  CMakeLists.txt  main.cpp
include/regolith/: component.h  debug.h  entity.h  id_generator.h  messaging.h  player.h  player_info.h  regolith.h  types.h  world.h  zone.h
src/: entity.cpp  id_generator.cpp  player.cpp  world.cpp  zone.cpp
utils/: dll_install_locations.txt  install.py
